# django-notifier-plus

./: .gitignore  README.rst  pyproject.toml
demo/: requirements.txt
demo/demo/: settings.py
docs/: 1setup.rst  requirements.txt
notifier/: admin.py  apps.py  backends.py  managers.py  models.py  shortcuts.py
notifier/management/: __init__.py
notifier/migrations/: 0001_initial.py
