[tool.poetry]
name = "django-notifier-plus"
version = "0"
description = "User and Group Notifications for Django"
authors = ["Cédric RICARD <ricard33@gmail.com>"]
license = "Simplified BSD"
readme = "README.rst"
repository = "http://github.com/ricard33/django-notifier-plus/"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules'
]
packages = [
    { include = "notifier" },
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"


[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"
